src/app/portfolio/portfolio-item/portfolio-item.component.scss
@import "theme";

.portfolio-item {
  min-height: min(512px, 50vh, 100vw);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  color: white;
  transition: all 0.3s ease-in-out 0s;
  @include padding(48px);
  
  // @include padding-right(24px);
}

.portfolio-item--header {
  @include margin-bottom(24px);
  transition: all 0.3s ease-in-out 0s;
}

.portfolio-item:hover .portfolio-item--body {
  max-height: 40vh;
  opacity: 1;
}

.portfolio-item--body {
  opacity: 0;
  max-height: 0;
  // display: flex;
  text-align: justify;
  transition: all 0.3s ease-in-out 0s;
  // margin-left: rem(48px);
  // margin-right: rem(48px);
}

